# file_rename

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  README_dist.md  build.ps1  build.sh  conftest.py  core.py  download.py  file_rename_gui.spec  list.txt  pyproject.toml  rename.py  run_gui.py
.github/workflows/: ci.yml
docs/: gui-plan.md  macos-setup.md  roadmap-2.md
gui/: __init__.py  __main__.py  clipboard.py  commands.py  logpanel.py  main_window.py  model.py  player.py  settings_dialog.py  workers.py
tests/: conftest.py  test_core.py  test_core_paths.py  test_gui_excel.py  test_gui_model.py  test_gui_player.py  test_gui_settings.py  test_gui_workers.py
