[project]
name = "file-rename"
version = "0.1.0"
description = "音声ファイルのタイトル推測・メタデータ書き込みスクリプト（mv2title のコンシューマ）"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "mv2title",
    "pyside6>=6.7",
    "python-dotenv>=1.0",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8",
    "pytest-qt>=4.4",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
# ハングしたテストを個別に打ち切る保険（CI の 6 時間ジョブ暴走の再発防止）。
# スイート全体が通常 1 分未満なので 1 テスト 60 秒は十分に余裕がある。
timeout = 60

[tool.uv]
# スクリプト集であってパッケージではない（ビルド・インストールしない）
package = false

[tool.uv.sources]
mv2title = { path = "../mv2title", editable = true }
